--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Management System</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -13,11 +14,10 @@
     <main>
         <section id="product-list">
             <h2>Product List</h2>
-            <button id="addProductBtn">Add Product</button>
+            <button id="addProductBtn"><i class="fas fa-plus"></i> Add Product</button>
             <div id="filters">
                 <input type="text" id="filterId" placeholder="Filter by Product ID">
-                <button onclick="filterProducts()">Filter</button>
-                
+                <button onclick="filterProducts()"><i class="fas fa-filter"></i> Filter</button>
                 <select id="sortOptions" onchange="sortProducts()">
                     <option value="productId">Sort by Product ID</option>
                     <option value="productName">Sort by Product Name</option>
