feat: Add confirmation message display for product actions

--- a/add.html
+++ b/add.html
@@ -23,6 +23,7 @@
                 <span class="error-message" id="priceError"></span>
                 
                 <label for="image">Image:</label>
+                <img id="imagePreview" src="" alt="Image Preview" style="width: 100px; height: 100px; display: none; margin-bottom: 10px;">
                 <input type="file" id="image" name="image" accept="image/*" required>
                 <span class="error-message" id="imageError"></span>
                 
