--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <section id="product-list">
             <h2>Product List</h2>
+            <div id="confirmationMessage" class="confirmation-message"></div>
             <div id="filters">
                 <input type="text" id="filterId" placeholder="Filter by Product ID...">
                 <select id="sortOptions" onchange="sortProducts()">
